@@ -4,7 +4,7 @@
     <groupId>com.kapelle.procheck.springboot</groupId>
     <artifactId>ProCheck-springBoot</artifactId>
     <version>1.0-SNAPSHOT</version> 
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -12,7 +12,7 @@
     </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>18</java.version>
+        <java.version>17</java.version>
         <!--maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target-->
         <!--exec.mainClass>com.kapelle.procheck.springboot.ProCheckSpringBoot</exec.mainClass-->   
@@ -21,6 +21,12 @@
         
     </properties>  
     <dependencies>
+        
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
@@ -36,6 +42,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <dependency>
 			<groupId>org.springframework.security</groupId>
@@ -76,15 +86,19 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
+        <!--TODO: NOTE: If you're using org.json in your code and it is conflicting with Spring's Vaadin dependency, 
+            then I would recommend trying open-json. It's a port of Vaadin's re-implementation of org.json, 
+            but they changed the packages so you won't have any conflicts with org.json:json or com.vaadin.external.google:android-json-->
+        <!--dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20220320</version>
-        </dependency>
+        </dependency-->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-        </dependency>
+        <groupId>com.github.openjson</groupId>
+        <artifactId>openjson</artifactId>
+        <version>1.0.12</version>
+    </dependency>
         <dependency>
             <groupId>com.google.maps</groupId>
             <artifactId>google-maps-services</artifactId>
@@ -98,9 +112,22 @@
     </dependencies> 
     <build>
         <plugins>
+            <!--TODO: NOTE: Azure configuration-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>azure-spring-apps-maven-plugin</artifactId>
+                <version>1.11.0</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Add-Opens>java.lang java.base</Add-Opens>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
